/*
 * Copyright (c) 2016-2021 Deephaven Data Labs and Patent Pending
 */

syntax = "proto3";

package io.deephaven.proto.backplane.grpc;

option java_multiple_files = true;
option optimize_for = SPEED;

import "io/deephaven/proto/session.proto";

service TableService {

  /*
   * Create an empty table with the given column names and types.
   */
  rpc EmptyTable(EmptyTableRequest) returns (ExportedTableCreationResponse) {}

  /*
   * Create a time table with the given start time and period.
   */
  rpc TimeTable(TimeTableRequest) returns (ExportedTableCreationResponse) {}

  /*
   * Drop columns from the parent table.
   */
  rpc DropColumns(DropColumnsRequest) returns (ExportedTableCreationResponse) {}

  /*
   * Add columns to the given table using the given column specifications and the update table operation.
   */
  rpc Update(SelectOrUpdateRequest) returns (ExportedTableCreationResponse) {}

  /*
   * Add columns to the given table using the given column specifications and the lazyUpdate table operation.
   */
  rpc LazyUpdate(SelectOrUpdateRequest) returns (ExportedTableCreationResponse) {}

  /*
   * Add columns to the given table using the given column specifications and the view table operation.
   */
  rpc View(SelectOrUpdateRequest) returns (ExportedTableCreationResponse) {}

  /*
   * Add columns to the given table using the given column specifications and the updateView table operation.
   */
  rpc UpdateView(SelectOrUpdateRequest) returns (ExportedTableCreationResponse) {}

  /*
   * Select the given columns from the given table.
   */
  rpc Select(SelectOrUpdateRequest) returns (ExportedTableCreationResponse) {}

  /*
   * Returns a new table definition with the unique tuples of the specified columns
   */
  rpc SelectDistinct(SelectDistinctRequest) returns (ExportedTableCreationResponse) {}

  /*
   * Filter parent table with structured filters.
   */
  rpc Filter(FilterTableRequest) returns (ExportedTableCreationResponse) {}

  /*
   * Filter parent table with unstructured filters.
   */
  rpc UnstructuredFilter(UnstructuredFilterTableRequest) returns (ExportedTableCreationResponse) {}

  /*
   * Sort parent table via the provide sort descriptors.
   */
  rpc Sort(SortTableRequest) returns (ExportedTableCreationResponse) {}

  /*
   * Extract rows from the head of the parent table.
   */
  rpc Head(HeadOrTailRequest) returns (ExportedTableCreationResponse) {}

  /*
   * Extract rows from the tail of the parent table.
   */
  rpc Tail(HeadOrTailRequest) returns (ExportedTableCreationResponse) {}

  /*
   * Run the headBy table operation for the given group by columns on the given table.
   */
  rpc HeadBy(HeadOrTailByRequest) returns (ExportedTableCreationResponse) {}

  /*
   * Run the tailBy operation for the given group by columns on the given table.
   */
  rpc TailBy(HeadOrTailByRequest) returns (ExportedTableCreationResponse) {}

  /*
   * Ungroup the given columns (all columns will be ungrouped if columnsToUngroup is empty or unspecified).
   */
  rpc Ungroup(UngroupRequest) returns (ExportedTableCreationResponse) {}

  /*
   * Create a merged table from the given input tables. If a key column is provided (not null), a sorted
   * merged will be performed using that column.
   */
  rpc MergeTables(MergeTablesRequest) returns (ExportedTableCreationResponse) {}

  /*
   * Returns the result of a table join operation.
   */
  rpc JoinTables(JoinTablesRequest) returns (ExportedTableCreationResponse) {}

  /*
   * Returns the result of an aggregate table operation.
   */
  rpc ComboAggregate(ComboAggregateRequest) returns (ExportedTableCreationResponse) {}

  /*
   * Snapshot rightId, triggered by leftId, and export the resulting new Table.
   * The left table's change events cause a new snapshot to be taken. The result table includes a
   * "snapshot key" which is a subset (possibly all) of the left table's columns. The
   * remaining columns in the result table come from right table, the table being snapshotted.
   */
  rpc Snapshot(SnapshotTableRequest) returns (ExportedTableCreationResponse) {}

  /*
   * Returns a new table with a flattened index.
   */
  rpc Flatten(FlattenRequest) returns (ExportedTableCreationResponse) {}

  /*
   * Batch a series of requests and send them all at once. This enables the user to create intermediate tables without
   * requiring them to be exported and managed by the client. The server will automatically release any tables when they
   * are no longer depended upon.
   */
  rpc Batch(BatchTableRequest) returns (stream ExportedTableCreationResponse) {}

  /*
   * Establish a stream of table updates for cheap notifications of table size updates.
   *
   * New streams will flush updates for all existing table exports. An export id of zero will be sent to indicate all
   * exports have sent their refresh update. Table updates may be intermingled with initial refresh updates after their
   * initial update had been sent.
   */
  rpc ExportedTableUpdates(ExportedTableUpdatesRequest) returns (stream ExportedTableUpdateMessage) {}
}

message TableReference {
  oneof ref {
    // an exported ticket
    Ticket ticket = 1;
    // an offset into a BatchRequest -- used to reference a result that will not be exported
    sint32 batch_offset = 2;
  }
}

message ExportedTableCreationResponse {
  TableReference result_id = 1;

  // If this is part of a batch, you may receive creation messages that indicate the sub-operation failed.
  bool success = 2;

  // If this is part of a batch, this errorInfo will be the message provided
  string error_info = 3;

  // Schema as described in Arrow Message.fbs::Message.
  bytes schema_header = 4;

  // Whether or not this table might change.
  bool is_static = 5;

  // The current number of rows for this table.
  sint64 size = 6 [jstype=JS_STRING];

  // TODO: attributes
}

message ExportedTableUpdatesRequest {
  // Intentionally empty and is here for backwards compatibility should this API change.
}

message ExportedTableUpdateMessage {
  Ticket export_id = 1;
  sint64 size = 2 [jstype=JS_STRING];
  string update_failure_message = 3;
}

message EmptyTableRequest {
  Ticket result_id = 1;
  sint64 size = 2 [jstype=JS_STRING];
  repeated string column_names = 3;
  repeated string column_types = 4;
}

message TimeTableRequest {
  Ticket result_id = 1;
  sint64 start_time_nanos = 2 [jstype=JS_STRING];
  sint64 period_nanos = 3 [jstype=JS_STRING];
}

message SelectOrUpdateRequest {
  Ticket result_id = 1;
  TableReference source_id = 2;
  repeated string column_specs = 3;
}

message SelectDistinctRequest {
  Ticket result_id = 1;
  TableReference source_id = 2;
  repeated string column_names = 3;
}

message DropColumnsRequest {
  Ticket result_id = 1;
  TableReference source_id = 2;
  repeated string column_names = 3;
}

message UnstructuredFilterTableRequest {
  Ticket result_id = 1;
  TableReference source_id = 2;
  repeated string filters = 3;
}

message HeadOrTailRequest {
  Ticket result_id = 1;
  TableReference source_id = 2;
  sint64 num_rows = 3 [jstype=JS_STRING];
}

message HeadOrTailByRequest {
  Ticket result_id = 1;
  TableReference source_id = 2;
  sint64 num_rows = 3 [jstype=JS_STRING];
  repeated string group_by_column_specs = 4;
}

message UngroupRequest {
  Ticket result_id = 1;
  TableReference source_id = 2;
  bool null_fill = 3;
  repeated string columns_to_ungroup = 4;
}

message MergeTablesRequest {
  Ticket result_id = 1;
  repeated TableReference source_ids = 2;
  string key_column = 3; // if specified, the result will be sorted by this column
}

message SnapshotTableRequest {
  Ticket result_id = 1;

  // The table on which to invoke the snapshot function. If unset, an empty(1) table will be used.
  TableReference left_id = 2;
  // The table to pass into the snapshot function.
  TableReference right_id = 3;
  // Whether to take an initial snapshot (passed to table.snapshot function).
  bool do_initial_snapshot = 4;
  // Which columns to take from the left table (can be renamed if desired).
  repeated string stamp_columns = 5;
}

message JoinTablesRequest {
  Ticket result_id = 1;
  TableReference left_id = 2;
  TableReference right_id = 3;
  repeated string columns_to_match = 4;
  repeated string columns_to_add = 5;
  Type join_type = 6;

  enum Type {
    CROSS_JOIN = 0;
    NATURAL_JOIN = 1;
    AS_OF_JOIN = 2;
    REVERSE_AS_OF_JOIN = 3;
    EXACT_JOIN = 4;
    LEFT_JOIN = 5;
  }
}

message ComboAggregateRequest {
  Ticket result_id = 1;
  TableReference source_id = 2;
  repeated Aggregate aggregates = 3;
  repeated string group_by_columns = 4;
  bool force_combo = 5; // don't use direct single-aggregate table operations even if there is only a single aggregate

  message Aggregate {
    AggType type = 1;
    repeated string match_pairs = 2; // used in all aggregates except countBy
    string column_name = 3; // countBy result (output) column OR weighted avg weight (input) column, otherwise unused
    double percentile = 4; // required by percentileBy aggregates, otherwise unused
    bool avg_median = 5; // used in percentileBy only
  }

  enum AggType {
    SUM = 0;
    ABS_SUM = 1;
    ARRAY = 2;
    AVG = 3;
    COUNT = 4;
    FIRST = 5;
    LAST = 6;
    MIN = 7;
    MAX = 8;
    MEDIAN = 9;
    PERCENTILE = 10;
    STD = 11;
    VAR = 12;
    WEIGHTED_AVG = 13;
  }
}

message SortDescriptor {
  string column_name = 1;
  bool is_absolute = 2;
  SortDirection direction = 3;

  enum SortDirection {
    UNKNOWN = 0;
    DESCENDING = -1;
    ASCENDING = 1;
    REVERSE = 2;
  }
}

message SortTableRequest {
  Ticket result_id = 1;
  TableReference source_id = 2;
  repeated SortDescriptor sorts = 3;
}

message FilterTableRequest {
  Ticket result_id = 1;
  TableReference source_id = 2;

  repeated FilterDescription filters = 3;
}

message FilterDescription {
  Operation filter_op = 1;
  repeated FilterDescription children = 2;
  oneof value {
    string string_value = 3;
    double double_value = 4;
    bool bool_value = 5;
    sint64 long_value = 6;
    sint64 nano_time_value = 7; // nanos since the epoch
  }

  enum Operation {
    UNKNOWN = 0;
    // 2+ children
    AND = 1;
    OR = 2;

    // 1 child
    NOT = 3;

    // 2 children are values
    LT = 4;
    GT = 5;
    LTE = 6;
    GTE = 7;
    EQ = 8;
    EQ_ICASE = 9;
    NEQ = 10;
    NEQ_ICASE = 11;

    // 2+ children are values
    IN = 12;
    IN_ICASE = 13;
    NOT_IN = 14;
    NOT_IN_ICASE = 15;

    // 1 child is anything (probably just value)
    IS_NULL = 16;
    // 0+ children are anything
    INVOKE = 17;

    // 0 children
    LITERAL = 18;
    REFERENCE = 19;

    CONTAINS = 20;
    CONTAINS_ICASE = 21;
    MATCHES = 22;
    MATCHES_ICASE = 23;

    SEARCH = 24;
  }
}

message FlattenRequest {
  Ticket result_id = 1;
  TableReference source_id = 2;
}

message BatchTableRequest {
  repeated Operation ops = 1;

  message Operation {
    oneof op {
      EmptyTableRequest empty_table = 1;
      TimeTableRequest time_table = 2;
      DropColumnsRequest drop_columns = 3;
      SelectOrUpdateRequest update = 4;
      SelectOrUpdateRequest lazy_update = 5;
      SelectOrUpdateRequest view = 6;
      SelectOrUpdateRequest update_view = 7;
      SelectOrUpdateRequest select = 8;
      SelectDistinctRequest select_distinct = 9;
      FilterTableRequest filter = 10;
      UnstructuredFilterTableRequest unstructured_filter = 11;
      SortTableRequest sort = 12;
      HeadOrTailRequest head = 13;
      HeadOrTailRequest tail = 14;
      HeadOrTailByRequest head_by = 15;
      HeadOrTailByRequest tail_by = 16;
      UngroupRequest ungroup = 17;
      MergeTablesRequest merge = 18;
      JoinTablesRequest join = 19;
      ComboAggregateRequest combo_aggregate = 20;
      SnapshotTableRequest snapshot = 21;
      FlattenRequest flatten = 22;
    }
  }
}
